--- a/twine.html
+++ b/twine.html
@@ -126,8 +126,8 @@ END
 
 [[다시 시작하기-&gt;S_1]]
 [[에필로그-&gt; A_14]]
-&lt;audio src=&quot;sounds/나만사는엔딩(J_13).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="17" name="J_14" tags="" position="364,1618" size="100,100">와!! 드디어 대피소의 모습이 저 앞에 보이네요.
-(PS)너무나 고생했습니다. 성공적으로 모두 대피소로 도착했습니다. 당신은 이제 안전합니다. 
+&lt;audio src=&quot;sounds/나만사는엔딩(J_13).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="17" name="J_14" tags="" position="363,1618" size="100,100">와!! 드디어 대피소의 모습이 저 앞에 보이네요.
+너무나 고생했습니다. 성공적으로 모두 대피소로 도착했습니다. 이곳이라면 좀비 사태가 끝날 때까지 메리도 당신도, 효진씨도 무사히 보호받을 수 있을 겁니다. 이제 당신은 안전합니다.
 
 &lt;img src=&quot;images/J_14.png&quot; width=&quot;1280&quot; height=&quot;740&quot; alt=&quot;이미지를 못 읽어올 때 표시되는 텍스트&quot;&gt;
 &lt;style&gt;
@@ -635,7 +635,8 @@ END
 
 
 
-[[처음으로-&gt;S_1]]</tw-passagedata><tw-passagedata pid="52" name="P_1" tags="" position="181,3400" size="100,100">당신은 위험에 빠진 사람을 구해주지 않기로 결심합니다. 애초에 이 위험한 상황에서 남까지 구할 여유도 없고, 또한 구해준다고 해도 같이 살아남기란 쉽지 않을 거라 생각했기 때문이죠. 
+[[처음으로-&gt;S_1]]
+[[에필로그-&gt; A_14]]</tw-passagedata><tw-passagedata pid="52" name="P_1" tags="" position="181,3400" size="100,100">당신은 위험에 빠진 사람을 구해주지 않기로 결심합니다. 애초에 이 위험한 상황에서 남까지 구할 여유도 없고, 또한 구해준다고 해도 같이 살아남기란 쉽지 않을 거라 생각했기 때문이죠. 
 
 
 
@@ -706,15 +707,37 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 
 
 [[도망가자! -&gt; P_8]]</tw-passagedata><tw-passagedata pid="57" name=" P_7" tags="" position="764,4002" size="100,100">당신은 눈앞의 좀비들로부터 도망가는 것은 무리라고 생각해, 좀비들과 싸우기로 마음먹었습니다.
-혹시나 위험한 상황이 있을 것 같아서 챙겨 온 야구방망이가 지금 도움이 될것 같네요!!
 
-&quot;좀비들 움직임이 빠르진 않고... 도망가지 말고 한번 싸워볼게요. 진짜 위험해지면 그때 도망쳐봐요.&quot;
+&quot;수가 너무 많아서 도망가는 건 무리 같아요. 어쩔 수 없죠.&quot;
+
+당신은 챙겨온 야구방망이를 꺼냅니다. 식은 땀이 나고 온몸이 떨리지만 이렇게 된 이상 물러날 곳은 없습니다.
 
 당신은 정말로 용감하게, 하지만 또 어떻게 보면 너무나도 무모하게, 좀비들과 싸우러 갑니다.
 
+&quot;제가 돌파해볼테니까, 효진씨 빨리 따라와요!&quot;
+&quot;앗, 잠깐만 진석씨... &quot;
+
+그래요, 당신은 할 수 있을거에요. 당신은 야구부 에이스 이진석이니까요! 당신은 열심히 자기암시를 하며 야구 방망이를 쥔 자세를 다잡습니다. 당신은 용감하게 당신을 향해 달려오는 첫 번째 좀비의 머리통을 후려갈깁니다. 안타입니다!! 당신의 풀스윙에 당한 좀비가 맥없이 쓰러져버리네요. 
+
+&quot;꾸에엑...&quot;
+
+퍽... 퍽...
+
+그러나 생각보다 좀비들의 수가 너무 많습니다. 앞쪽의 좀비를 가까스로 해치우면 뒤쪽에서 달려들어, 당신은 바닥을 구르고 기며 겨우겨우 좀비들을 당해냅니다. 이 많은 좀비들을 상대할 수 있다고 생각했다니 당신 대체 무슨 생각이었나요? 
+
+앗, 그러고보니 효진씨는 어디로 간거죠? 방금 전까지 당신을 따라오고 있었는데 말입니다. 
+
+&quot;효진씨! 효진씨!&quot;
+
+설마 효진씨가 좀비에게 당한 건 아니겠죠? 고개를 들어 효진씨를 찾아보려고 하지만, 당신의 시야를 온통 좀비떼들이 가리고 있습니다. 당신이 정신이 팔린 사이 등 뒤에서 좀비가 달려듭니다.
+
+&quot;끼에에엑!!!&quot;
+&quot;으아아아!!&quot;
+
+가까스로 몸을 굴려 당신을 덮치려는 좀비를 피하지만, 다음 번 공격에는 무사하지 못할 것 같습니다. 어쩌죠... 당신을 도와줄 사람은 아무도 없어보입니다. 당신은 이렇게 당신 자신도, 효진씨도, 메리도 지키지 못하는 걸까요. 당신은 두 눈을 질끈 감습니다.
 
 
-[[아 모르겠다! 일단 싸우러 가자! -&gt; P_10]]
+[[이젠 끝난건가... -&gt; P_10]]
 
 &lt;audio src=&quot;sounds/P_7(타격음).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="58" name=" P_6" tags="" position="896,3881" size="100,100">&quot;지금 너무 위험한 상황인거 같아요. 도망칠 수도 없을 것 같고, 저 많은 좀비들과 싸울 수도 없을 것 같아요. 효진씨, 저희 어떻게 하면 좋을까요??&quot;
 
@@ -766,28 +789,30 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 
 
 
-[[휴... 진짜 너무 다행이다! -&gt;A_5]]</tw-passagedata><tw-passagedata pid="61" name=" P_10" tags="" position="765,4152" size="100,100">야구부 에이스였던 당신. 당신의 타격 실력은 아직도 살아있습니다. 당신의 야구방망이질은 좀비들에게도 매우 위협적입니다.
+[[휴... 진짜 너무 다행이다! -&gt;A_5]]</tw-passagedata><tw-passagedata pid="61" name=" P_10" tags="" position="765,4152" size="100,100">...
 
-퍽... 퍽...
+파-악!
 
-한방 한방 가격할 때마다 눈앞의 좀비가 한마리씩 쓰러져 나갑니다. 생각보다 싸울 만하다고 느낀 당신. 이 기세를 몰아서 계속해서 싸움을 이어나갑니다. 그렇게 시간이 얼마나 되었을까, 이제 대충 상황이 정리가 된 느낌이에요. 이제 좀 쉬고 싶다고 생각하고 있는 당신. 하지만 그 방심한 틈에 뒤에서 좀비가 달려듭니다.
+난데없이 들려온 타격음에 당신은 놀라 눈을 뜹니다. 
 
-&quot;으아아아!!&quot;
+&quot;효진씨?&quot;
 
-가까스로 좀비의 공격을 피하긴 했지만, 무너진 자세에서 좀비와 싸우기는 살짝 역부족인것처럼 보입니다. 어쩌면 이대로 끝날 수도 있겠다고 생각한 당신. 좀비가 다시 공격하는 것을 보고 당신은 눈을 찔끔 감습니다.
+당신은 효진씨의 완벽한 돌려차기에 당신을 덮쳐오던 좀비가 저만치 날아가는 것을 멍하니 지켜봅니다.
+ 
+&quot;진석씨 괜찮아요?&quot;
 
-&quot;이젠 끝난건가...&quot;
+당신은 어리둥절한 얼굴로 효진씨가 내민 손을 잡고 일어납니다. 
 
-...
+&quot;효진씨... 무슨 과라고 했었죠?&quot;
+&quot;아... 저 태권도 학과요.&quot;
 
-...
+이런, 번데기 앞에서 주름잡은 꼴이었군요. 당신은 머쓱함에 목을 긁적거립니다.
 
-...
+&quot;같이 싸우자고 하려고 했는데, 진석씨가 먼저 가버렸네요.&quot;
+&quot;고마워요... 살려줘서.&quot;
+&quot;아뇨, 저도 진석씨를 한번은 돕고 싶었어요!&quot;
 
-왠진 모르겠지만 좀비는 공격을 하지 않았습니다. 아니, 오히려 뭔가 당황한 기색이 보이더군요. 당신은 이 기회를 놓치지 않고 야구방망이로 좀비를 가격합니다. 곧 좀비는 쓰러졌고, 바로 그 옆에는 메리가 있었습니다. 좀비의 발목을 물고 있는 상태로요.
-
-&quot;메리야... 고마워... 너가 날 살려줄 줄은 몰랐는데.&quot;
-
+좀비 떼가 아직 좀 더 남았지만 유단자 효진씨와 함께라면 돌파할 수 있을 것 같습니다. 짐이라고만 생각했던 메리도 한몫을 하고 있어요. 메리는 당신과 효진씨를 공격해오는 좀비들의 바짓가랑이를 열심히 물고 늘어집니다. 당신 일행은 좀비떼를 돌파하여 가까스로 안전한 곳에 이르게 됩니다!
 
 
 [[다음으로 -&gt;A_5]]</tw-passagedata><tw-passagedata pid="62" name=" P_13" tags="" position="124,1630" size="100,100">자동차 뒷자리 바닥을 보자마자 당신은 소리칩니다. 
