--- a/twine.html
+++ b/twine.html
@@ -65,7 +65,7 @@ body, tw-story
 
 
 
-[[쉿, 좀만 기다려보자 -&gt; J_8]]</tw-passagedata><tw-passagedata pid="8" name=" J_9" tags="" position="404,1027" size="100,100">이러는 강아지를 다뤄본 적이 없는 당신은 급한 마음에 목줄을 세게 당겼습니다. 그러자 메리는 놀라고 말았어요. 
+[[쉿, 좀만 기다려보자 -&gt; J_8]]</tw-passagedata><tw-passagedata pid="8" name=" J_9" tags="" position="404,1026" size="100,100">이러는 강아지를 다뤄본 적이 없는 당신은 급한 마음에 목줄을 세게 당겼습니다. 그러자 메리는 놀라고 말았어요. 
 &#39;멍멍멍!
 좀비들이 소리를 들어 들키게 됩니다.. 
 
@@ -75,8 +75,9 @@ END
 
 
 
-[[다시 시작하기-&gt;S_1]]
 [[에필로그-&gt; A_14]]
+[[다시 시작하기-&gt;S_1]]
+&lt;a href=&quot;https://bit.ly/2020ISD&quot; target=_blank&gt;스토리 디자이너 or 주인공에게 메시지 남기기!&lt;/a&gt;
 
 &lt;audio src=&quot;sounds/J_9(강아지와 좀비).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="9" name="J_6" tags="" position="552,770" size="100,100">당신과 효진씨는 갓길에 정차되어 있는 자동차 뒤로 숨으려 합니다. 몸을 숙이고 숨을 죽이고 있다가 좀비가 갈 때 까지 기다리는 거에요. 
 
@@ -112,7 +113,7 @@ END
 
 
 
-[[혹시 모르니까 살펴보는게 좋겠지 -&gt; P_13]]</tw-passagedata><tw-passagedata pid="16" name=" J_13" tags="" position="71,1321" size="100,100">정신없이 달리고 있는 당신은 백미러를 한번 확인했습니다. 
+[[혹시 모르니까 살펴보는게 좋겠지 -&gt; P_13]]</tw-passagedata><tw-passagedata pid="16" name=" J_13" tags="" position="71,1320" size="100,100">정신없이 달리고 있는 당신은 백미러를 한번 확인했습니다. 
 그런데, 그만 뒷자석에 있는 좀비를 발견하고 맙니다! 
 소스라치게 놀라며 차의 브레이크를 세게 눌러 차를 급정차 시킵니다. 그리고 야구 방망기를 재빨리 꺼내 좀비를 죽이려고 뒷문을 열었습니다. 
 그러나 좀비는 당신보다 빨리 움직였네요.. 메리를 물어버린 것입니다. 
@@ -124,8 +125,10 @@ END
 
 
 
-[[다시 시작하기-&gt;S_1]]
 [[에필로그-&gt; A_14]]
+[[다시 시작하기-&gt;S_1]]
+&lt;a href=&quot;https://bit.ly/2020ISD&quot; target=_blank&gt;스토리 디자이너 or 주인공에게 메시지 남기기!&lt;/a&gt;
+
 &lt;audio src=&quot;sounds/나만사는엔딩(J_13).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="17" name="J_14" tags="" position="363,1618" size="100,100">와!! 드디어 대피소의 모습이 저 앞에 보이네요.
 너무나 고생했습니다. 성공적으로 모두 대피소로 도착했습니다. 이곳이라면 좀비 사태가 끝날 때까지 메리도 당신도, 효진씨도 무사히 보호받을 수 있을 겁니다. 이제 당신은 안전합니다.
 
@@ -340,7 +343,7 @@ $(&#39;#2&#39;).fadeOut(1000).fadeIn(1000);
 
 [[재난 문자를 확인하기 -&gt; S_25]]
 
-&lt;audio src=&quot;sounds/S_23(타격음).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="28" name=" S_24 " tags="" position="388,2674" size="100,100">당신이 우물쭈물 하는 사이, 괴물이 된 연우씨가 웰시코기 메리를 떨쳐내는데 성공합니다. 당신은 피하려고 하지만 연우씨는 너무 빠릅니다. 당신의 목덜미에 연우씨의 날카로운 이빨이 박히는 것이 느껴집니다. 끔찍한 고통과 함께 정신이 아득해집니다.
+&lt;audio src=&quot;sounds/S_23(타격음).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="28" name=" S_24 " tags="" position="388,2672" size="100,100">당신이 우물쭈물 하는 사이, 괴물이 된 연우씨가 웰시코기 메리를 떨쳐내는데 성공합니다. 당신은 피하려고 하지만 연우씨는 너무 빠릅니다. 당신의 목덜미에 연우씨의 날카로운 이빨이 박히는 것이 느껴집니다. 끔찍한 고통과 함께 정신이 아득해집니다.
 
 당신은 좀비가 되었습니다.
 
@@ -349,8 +352,9 @@ END
 
 
 
-[[다시 시작하기-&gt;S_1]]
 [[에필로그-&gt; A_14]]
+[[다시 시작하기-&gt;S_1]]
+&lt;a href=&quot;https://bit.ly/2020ISD&quot; target=_blank&gt;스토리 디자이너 or 주인공에게 메시지 남기기!&lt;/a&gt;
 
 &lt;audio src=&quot;sounds/좀비한테물리는엔딩(S_24 J_7).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="29" name=" S_25" tags="" position="258,2816" size="100,100">- 긴급 재난 문자 - 
 [서대문구청] 원인 불명의 바이러스로 인해 서울시 전체 봉쇄. 주민들은 영종도 대피소로 대피하시길 바랍니다. 
@@ -529,7 +533,7 @@ $(&#39;#7&#39;).fadeOut(1000).fadeIn(1000);
 
 
 
-[[쿨..쿨..쿨... -&gt; A_8]]</tw-passagedata><tw-passagedata pid="45" name=" P_11" tags="" position="708,1093" size="100,100">숫자 앞에 장사 없다고 했던가요. 이 상황을 모면하기에는 주위에 좀비가 너무 많은 것 같습니다. 당신이 아무리 야구방망이를 휘둘러도 좀비의 숫자는 줄지를 않습니다. 오히려 당신의 힘만 빠지고, 점점 지쳐가는 모습만이 보입니다.
+[[쿨..쿨..쿨... -&gt; A_8]]</tw-passagedata><tw-passagedata pid="45" name=" P_11" tags="" position="709,1090" size="100,100">숫자 앞에 장사 없다고 했던가요. 이 상황을 모면하기에는 주위에 좀비가 너무 많은 것 같습니다. 당신이 아무리 야구방망이를 휘둘러도 좀비의 숫자는 줄지를 않습니다. 오히려 당신의 힘만 빠지고, 점점 지쳐가는 모습만이 보입니다.
 
 &quot;여기까진가...&quot;
 
@@ -557,8 +561,9 @@ END
 
 
 
-[[다시 시작하기-&gt;S_1]]
 [[에필로그-&gt; A_14]]
+[[다시 시작하기-&gt;S_1]]
+&lt;a href=&quot;https://bit.ly/2020ISD&quot; target=_blank&gt;스토리 디자이너 or 주인공에게 메시지 남기기!&lt;/a&gt;
 
 &lt;audio src=&quot;sounds/좀비한테물리는엔딩(S_24 J_7).wav&quot; autoplay&gt;</tw-passagedata><tw-passagedata pid="46" name=" A_8" tags="" position="859,1093" size="100,100">세상 모르게 잠에 들었던 당신은 이상한 소리에 벌떡 일어났습니다. 급하게 두리번 거리자 저 멀리서 점점 다가오는 좀비떼가 보입니다. 당신은 다급하게 메리와 효진이를 깨우고 메리를 안아 올립니다.
 
@@ -595,7 +600,7 @@ END
 
 
 
-[[다음으로-&gt; A_12]]</tw-passagedata><tw-passagedata pid="50" name=" A_12" tags="" position="783,1693" size="100,100">당신과 효진, 메리는 모두 열심히 싸웠지만 좀비들에게 숫자에서 크게 밀렸습니다. 열심히 싸워도 계속 밀려 오는 좀비를 모두 죽이기에는 역부족이었습니다. 결국 당신과 효진이는 각각 목덜미와 어깨를 물려 좀비가 되었고, 엉덩이를 물린 메리는 좀비 강아지가 되었습니다.
+[[다음으로-&gt; A_12]]</tw-passagedata><tw-passagedata pid="50" name=" A_12" tags="" position="783,1692" size="100,100">당신과 효진, 메리는 모두 열심히 싸웠지만 좀비들에게 숫자에서 크게 밀렸습니다. 열심히 싸워도 계속 밀려 오는 좀비를 모두 죽이기에는 역부족이었습니다. 결국 당신과 효진이는 각각 목덜미와 어깨를 물려 좀비가 되었고, 엉덩이를 물린 메리는 좀비 강아지가 되었습니다.
 
 결국 대피소에 가는 건 실패했네요. 허무한 결말인가요? 이제 당신에게는 살아있는 고기를 먹고 싶다는 새로운 열망이 끓어오릅니다.
 
@@ -605,42 +610,13 @@ END
 
 
 
+[[에필로그-&gt; A_14]]
 [[다시 시작하기-&gt;S_1]]
-[[에필로그-&gt; A_14]]</tw-passagedata><tw-passagedata pid="51" name="A_4" tags="" position="728,558" size="100,100">&quot;메리메리메리메리. 얼른 돌아와 얼른 돌아와 얼른&quot;
-답답했던 당신은 메리의 목줄을 당기며 강조되고 반복되는 소리를 들려줬습니다. 메리가 공에만 정신이 팔려 아무런 반응이 없자 이내 당신은 박수까지 치기 시작했습니다.
-
-당신의 다급한 마음을 알 턱이 없는 메리는 이름을 부르는 소리에 한 번 뒤돌아 봤다가 이내 신나게 꼬리를 흔들며 공을 찾으러 자동차 밑으로 들어갑니다. 목줄을 당기는 당신의 힘에도 불구하고 메리는 고집스럽게 줄을 당기고, 급기야는 당신이 질질 끌려갑니다. 목줄을 더 세게 당기기에는 메리가 다칠 것 같다는 생각이 듭니다. 이제 당신은 메리가 공을 빨리 찾기만을 바라고 있습니다.
-
-드디어 찾았나? 아까는 그렇게 줄을 당겼던 메리가 이제는 슬금슬금 뒤로 나오기 시작합니다. 신이 나 버린 우리의 메리는 공을 입에 물고 꼬리를 마구 흔들며 몸을 낮추고 엉덩이를 치켜듭니다.
-
-&#39;무슨 뜻이지?&#39;
-
-당신은 이제 메리가 공을 꺼냈으니 조용히 숨어있을 수 있을거라 생각합니다. 그러나 메리는 더 많은 걸 원하고 있는 거 같습니다. 메리의 행동이 무엇을 의미하는지 모르는 당신은 의아한 표정으로 가만히 바라보고 있습니다. 그러자 메리는 곧바로 짖기 시작했습니다.
-
-&quot;멍멍!&quot;
-
-깜짝 놀란 당신은 주위의 좀비들에게 들릴까봐 메리를 바로 제지하려고 했습니다. 
-
-&quot;안돼! 안돼!&quot;
-
-당신이 안 된다고 소리치자 메리는 더욱 흥분하여 크게 짖기 시작합니다.
-
-&quot;멍!!! 멍!!!!! 멍!!!!!!!!!!!&quot;
-
-당신은 당황해서 어쩔 줄 모릅니다. 주위를 둘러보자 좀비들의 고개가 서서히 이 쪽으로 꺾이고 있네요. 좀비들은 빠르게 다가와 어느새 당신이 숨은 자동차 주위를 완전히 둘러쌉니다. 그제서야 당신은 야구 방망이를 휘둘러보지만, 많은 수의 좀비들을 당해낼 수는 없었습니다. 저런, 안타깝지만... 당신과 메리는 좀비가 되는 최후를 맞이했습니다.
-
-&lt;img src=&quot;images/A_4.png&quot; width=&quot;526.5&quot; height=&quot;532.5&quot; alt=&quot;이미지를 못 읽어올 때 표시되는 텍스트&quot;&gt;
-
-END
+&lt;a href=&quot;https://bit.ly/2020ISD&quot; target=_blank&gt;스토리 디자이너 or 주인공에게 메시지 남기기!&lt;/a&gt;</tw-passagedata><tw-passagedata pid="51" name="P_1" tags="" position="181,3400" size="100,100">당신은 위험에 빠진 사람을 구해주지 않기로 결심합니다. 애초에 이 위험한 상황에서 남까지 구할 여유도 없고, 또한 구해준다고 해도 같이 살아남기란 쉽지 않을 거라 생각했기 때문이죠. 
 
 
 
-[[처음으로-&gt;S_1]]
-[[에필로그-&gt; A_14]]</tw-passagedata><tw-passagedata pid="52" name="P_1" tags="" position="181,3400" size="100,100">당신은 위험에 빠진 사람을 구해주지 않기로 결심합니다. 애초에 이 위험한 상황에서 남까지 구할 여유도 없고, 또한 구해준다고 해도 같이 살아남기란 쉽지 않을 거라 생각했기 때문이죠. 
-
-
-
-[[다음으로 -&gt; P_2]]</tw-passagedata><tw-passagedata pid="53" name=" P_2" tags="" position="327,3546" size="100,100">그렇게 당신은 메리와 함께 영종도를 향해 다시 출발합니다. 얼마만큼 갔을까, 상당히 많이 간 것 같기는 한데 오토바이가 말썽이군요. 엑셀이 말을 듣지 않습니다.
+[[다음으로 -&gt; P_2]]</tw-passagedata><tw-passagedata pid="52" name=" P_2" tags="" position="327,3546" size="100,100">그렇게 당신은 메리와 함께 영종도를 향해 다시 출발합니다. 얼마만큼 갔을까, 상당히 많이 간 것 같기는 한데 오토바이가 말썽이군요. 엑셀이 말을 듣지 않습니다.
 
 &quot;어어...? 이거 왜 작동을 안하지?&quot;
 
@@ -648,7 +624,7 @@ END
 
 
 
-[[어쩔 수 없어 걸어가야만 해 -&gt; P_3]]</tw-passagedata><tw-passagedata pid="54" name=" P_3" tags="" position="158,3739" size="100,100">&quot;좀만 더 걸어가면 영종대교 앞에 도착하겠네... 지도상 한 30분?&quot;
+[[어쩔 수 없어 걸어가야만 해 -&gt; P_3]]</tw-passagedata><tw-passagedata pid="53" name=" P_3" tags="" position="158,3739" size="100,100">&quot;좀만 더 걸어가면 영종대교 앞에 도착하겠네... 지도상 한 30분?&quot;
 
 길을 따라서 쭉 걸어가면 금방 도착할 듯 합니다. 하지만 걸어가는데 문제가 생겼습니다. 길 앞쪽에 좀비 무리가 보입니다. 당신은 잠깐 싸워볼까도 생각했지만, 곧 굳이 쓸데없이 힘을 뺄 필요가 없다고 생각을 합니다.
 
@@ -662,7 +638,7 @@ END
 [[자동차 뒤로 숨어 보자 -&gt;J_6]]
 [[옆 건물 안으로 들어가있자 -&gt;J_4]]
 
-&lt;audio src=&quot;sounds/무서운상황(P_3 S_4).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="55" name="P_4" tags="" position="779,3719" size="100,100">당신과 효진씨, 그리고 메리는 위험한 상황을 무사히 넘겼습니다. 다들 많이 피곤할거에요. 그도 그럴 것이, 태어나서 언제 좀비한테 쫓기는 상황을 경험해봤겠어요. 하지만 방심하고 있을 순 없습니다. 어서 빨리 대피소에 도착해야 하니까요. 당신의 일행은 또 다시, 계속해서 걸어갑니다.
+&lt;audio src=&quot;sounds/무서운상황(P_3 S_4).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="54" name="P_4" tags="" position="779,3719" size="100,100">당신과 효진씨, 그리고 메리는 위험한 상황을 무사히 넘겼습니다. 다들 많이 피곤할거에요. 그도 그럴 것이, 태어나서 언제 좀비한테 쫓기는 상황을 경험해봤겠어요. 하지만 방심하고 있을 순 없습니다. 어서 빨리 대피소에 도착해야 하니까요. 당신의 일행은 또 다시, 계속해서 걸어갑니다.
 
 &quot;해가 지고 있네요... 이제 더 걸어가는 거는 힘들지 않을까요? 우선 오늘 쉴 곳을 좀 찾아봐요.&quot;
 
@@ -698,7 +674,7 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 [[난 야구방망이가 있어! 싸울 수 있을 것 같아. -&gt; P_7]]
 [[조용히 죽은 척 해볼까...? 어쩌면 좀비들이 그냥 지나갈지도 모르잖아? -&gt; P_6]]
 
-&lt;audio src=&quot;sounds/긴박한상황(P_4 A_9).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="56" name=" P_5" tags="" position="616,3992" size="100,100">당신은 좀비와 싸우는 것은 무리라고 생각해, 효진씨와 함께 도망치기로 마음먹었습니다.
+&lt;audio src=&quot;sounds/긴박한상황(P_4 A_9).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="55" name=" P_5" tags="" position="616,3992" size="100,100">당신은 좀비와 싸우는 것은 무리라고 생각해, 효진씨와 함께 도망치기로 마음먹었습니다.
 
 &quot;역시... 도망치는게 맞겠죠?? 우선 여기를 벗어난 다음에 하룻밤 쉴 곳을 찾아봐요.&quot;
 
@@ -706,7 +682,7 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 
 
 
-[[도망가자! -&gt; P_8]]</tw-passagedata><tw-passagedata pid="57" name=" P_7" tags="" position="764,4002" size="100,100">당신은 눈앞의 좀비들로부터 도망가는 것은 무리라고 생각해, 좀비들과 싸우기로 마음먹었습니다.
+[[도망가자! -&gt; P_8]]</tw-passagedata><tw-passagedata pid="56" name=" P_7" tags="" position="764,4002" size="100,100">당신은 눈앞의 좀비들로부터 도망가는 것은 무리라고 생각해, 좀비들과 싸우기로 마음먹었습니다.
 
 &quot;수가 너무 많아서 도망가는 건 무리 같아요. 어쩔 수 없죠.&quot;
 
@@ -739,7 +715,7 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 
 [[이젠 끝난건가... -&gt; P_10]]
 
-&lt;audio src=&quot;sounds/P_7(타격음).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="58" name=" P_6" tags="" position="896,3881" size="100,100">&quot;지금 너무 위험한 상황인거 같아요. 도망칠 수도 없을 것 같고, 저 많은 좀비들과 싸울 수도 없을 것 같아요. 효진씨, 저희 어떻게 하면 좋을까요??&quot;
+&lt;audio src=&quot;sounds/P_7(타격음).wav&quot;autoplay&gt;</tw-passagedata><tw-passagedata pid="57" name=" P_6" tags="" position="896,3881" size="100,100">&quot;지금 너무 위험한 상황인거 같아요. 도망칠 수도 없을 것 같고, 저 많은 좀비들과 싸울 수도 없을 것 같아요. 효진씨, 저희 어떻게 하면 좋을까요??&quot;
 
 누가 봐도 지금 상황은 심각합니다. 도저히 답이 없어보이는 상황이에요. 아무리 고민해도 좋은 방법은 떠오르지가 않아, 당신은 모험을 걸어봅니다.
 
@@ -755,7 +731,7 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 
 
 
-[[괜찮겠지? 괜찮을거야 아무 일도 없을거야! -&gt; P_9]]</tw-passagedata><tw-passagedata pid="59" name=" P_8" tags="" position="455,4097" size="100,100">&quot;이쪽으로!&quot;
+[[괜찮겠지? 괜찮을거야 아무 일도 없을거야! -&gt; P_9]]</tw-passagedata><tw-passagedata pid="58" name=" P_8" tags="" position="455,4097" size="100,100">&quot;이쪽으로!&quot;
 
 앞쪽 길에는 좀비가 많아, 당신의 일행은 옆 쪽 샛길로 우회해서 도망가기로 결심합니다. 이 위기 상황만 잘 빠져 나간다면, 아마 이 뒤로는 큰 문제가 없을 거라고 믿어요. 그 믿음에 보답하듯, 샛길은 좀비 하나 없이 매우 안전한 상태입니다. 당신은 그 샛길을 통해 쭉 걸어나갑니다.
 
@@ -783,13 +759,13 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 
 
 
-[[어쩌면... 탈출할 수 있지 않을까? -&gt; P_11]]</tw-passagedata><tw-passagedata pid="60" name=" P_9" tags="" position="896,4031" size="100,100">효진씨는 메리를 안아주고, 메리의 눈을 가려줍니다. 혹시나 메리가 극도로 불안감을 느껴 짖는 것이 걱정되었기 때문입니다. 강아지를 차분하게 만들어주고, 곧 메리는 진정되었습니다. 이 상태면 다같이 죽은 척 하고 있어도 조용히 있을 수 있을 것입니다.
+[[어쩌면... 탈출할 수 있지 않을까? -&gt; P_11]]</tw-passagedata><tw-passagedata pid="59" name=" P_9" tags="" position="896,4031" size="100,100">효진씨는 메리를 안아주고, 메리의 눈을 가려줍니다. 혹시나 메리가 극도로 불안감을 느껴 짖는 것이 걱정되었기 때문입니다. 강아지를 차분하게 만들어주고, 곧 메리는 진정되었습니다. 이 상태면 다같이 죽은 척 하고 있어도 조용히 있을 수 있을 것입니다.
 
 당신의 일행은 쥐 죽은 듯이 가만히, 정말로 가만히 죽은척 하면서 좀비들이 물러나기를 기다리고 있습니다. 10분... 20분... 그렇게 얼마나 시간이 흘렀을까. 아까 그 많았던 좀비들은 어디로 갔는지 이제 거의 보이지 않습니다. 정말 무모하다고 생각했던 &#39;죽은척 하기&#39; 방식이 좀비들한테 통했네요.
 
 
 
-[[휴... 진짜 너무 다행이다! -&gt;A_5]]</tw-passagedata><tw-passagedata pid="61" name=" P_10" tags="" position="765,4152" size="100,100">...
+[[휴... 진짜 너무 다행이다! -&gt;A_5]]</tw-passagedata><tw-passagedata pid="60" name=" P_10" tags="" position="765,4152" size="100,100">...
 
 파-악!
 
@@ -815,7 +791,7 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 좀비 떼가 아직 좀 더 남았지만 유단자 효진씨와 함께라면 돌파할 수 있을 것 같습니다. 짐이라고만 생각했던 메리도 한몫을 하고 있어요. 메리는 당신과 효진씨를 공격해오는 좀비들의 바짓가랑이를 열심히 물고 늘어집니다. 당신 일행은 좀비떼를 돌파하여 가까스로 안전한 곳에 이르게 됩니다!
 
 
-[[다음으로 -&gt;A_5]]</tw-passagedata><tw-passagedata pid="62" name=" P_13" tags="" position="124,1630" size="100,100">자동차 뒷자리 바닥을 보자마자 당신은 소리칩니다. 
+[[다음으로 -&gt;A_5]]</tw-passagedata><tw-passagedata pid="61" name=" P_13" tags="" position="124,1630" size="100,100">자동차 뒷자리 바닥을 보자마자 당신은 소리칩니다. 
 
 &quot;으아아아아아!! 깜짝이야!!&quot;
 
@@ -823,7 +799,7 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 
 
 
-[[정말 다행이야 운전만 잘하면 돼 -&gt;J_14]]</tw-passagedata><tw-passagedata pid="63" name="S_29" tags="" position="196,799" size="100,100">당신은 효진씨와 걸어가며 이런저런 사실들을 알게되었습니다. 그녀는 당신과 동갑내기인 대학생으로, 버스를 타고가던 와중에 도로에는 좀비가 나타나 순식간에 아수라장이 되었고 그 때 사고가 났다고 해요. 매정한 사람들, 아무도 효진씨를 도와주지 않고 도망가버렸나봐요.
+[[정말 다행이야 운전만 잘하면 돼 -&gt;J_14]]</tw-passagedata><tw-passagedata pid="62" name="S_29" tags="" position="196,799" size="100,100">당신은 효진씨와 걸어가며 이런저런 사실들을 알게되었습니다. 그녀는 당신과 동갑내기인 대학생으로, 버스를 타고가던 와중에 도로에는 좀비가 나타나 순식간에 아수라장이 되었고 그 때 사고가 났다고 해요. 매정한 사람들, 아무도 효진씨를 도와주지 않고 도망가버렸나봐요.
 
 &quot;어디가는 중이었어요?&quot;
 
@@ -850,7 +826,7 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 
 
 
-[[다음으로 -&gt;S_4]] </tw-passagedata><tw-passagedata pid="64" name="S_30" tags="" position="156,2495" size="100,100">&quot;잠깐 효진씨!&quot;
+[[다음으로 -&gt;S_4]] </tw-passagedata><tw-passagedata pid="63" name="S_30" tags="" position="156,2495" size="100,100">&quot;잠깐 효진씨!&quot;
 
 효진씨 정말 엄청난 사람이군요. 강아지를 구하려고 이런 도박을 하다니요! 후, 어쩔 수 없죠. 당신도 효진씨를 따라 뛰어나갑니다.
 
@@ -864,7 +840,7 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 
 
 
-[[이제 다시 출발해볼까? -&gt;P_4]]</tw-passagedata><tw-passagedata pid="65" name=" A_14" tags="" position="1191,1192" size="100,100">멍멍테이블 스토리 디자이너들의 후기
+[[이제 다시 출발해볼까? -&gt;P_4]]</tw-passagedata><tw-passagedata pid="64" name=" A_14" tags="" position="1191,1191" size="100,100">멍멍테이블 스토리 디자이너들의 후기
 
 
 정지수 (팀장/스토리 디자이너/스토리 PD/테크니컬&amp;퀄리티 PD)
@@ -882,7 +858,7 @@ $(&#39;#3&#39;).fadeOut(1000).fadeIn(1000);
 
 
 &lt;a href=&quot;https://bit.ly/2020ISD&quot; target=_blank&gt;스토리 디자이너들에게 메시지 남기기!&lt;/a&gt;
-&lt;a href=&quot;https://bit.ly/2020ISD&quot; target=_blank&gt;좀비 세계에서 고생한 캐릭터들에게 메시지 남기기!&lt;/a&gt;</tw-passagedata><tw-passagedata pid="66" name=" A_4" tags="" position="553,1070" size="100,100">&quot;메리메리메리메리. 얼른 돌아와 얼른 돌아와 얼른&quot;
+&lt;a href=&quot;https://bit.ly/2020ISD&quot; target=_blank&gt;좀비 세계에서 고생한 캐릭터들에게 메시지 남기기!&lt;/a&gt;</tw-passagedata><tw-passagedata pid="65" name=" A_4" tags="" position="553,1070" size="100,100">&quot;메리메리메리메리. 얼른 돌아와 얼른 돌아와 얼른&quot;
 답답했던 당신은 메리의 목줄을 당기며 강조되고 반복되는 소리를 들려줬습니다. 메리가 공에만 정신이 팔려 아무런 반응이 없자 이내 당신은 박수까지 치기 시작했습니다.
 
 당신의 다급한 마음을 알 턱이 없는 메리는 이름을 부르는 소리에 한 번 뒤돌아 봤다가 이내 신나게 꼬리를 흔들며 공을 찾으러 자동차 밑으로 들어갑니다. 목줄을 당기는 당신의 힘에도 불구하고 메리는 고집스럽게 줄을 당기고, 급기야는 당신이 질질 끌려갑니다. 목줄을 더 세게 당기기에는 메리가 다칠 것 같다는 생각이 듭니다. 이제 당신은 메리가 공을 빨리 찾기만을 바라고 있습니다.
@@ -911,8 +887,9 @@ END
 
 
 
+[[에필로그-&gt; A_14]]
 [[다시 시작하기-&gt;S_1]]
-[[에필로그-&gt; A_14]]</tw-passagedata></tw-storydata>
+&lt;a href=&quot;https://bit.ly/2020ISD&quot; target=_blank&gt;스토리 디자이너 or 주인공에게 메시지 남기기!&lt;/a&gt;</tw-passagedata><tw-passagedata pid="66" name="A_14" tags="" position="404,1177" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
